# future-of-ai-is-open-hackathon

./: CONTRIBUTING.md  Dockerfile  README.md  app.py  entrypoint.sh  pyproject.toml  requirements.txt
.streamlit/: config.toml
utils/: ai_helpers.py  chat_helpers.py  data_analysis.py  data_analysis_helpers.py  data_analyst_and_chart_builder_helpers.py  data_analyst_helpers.py  data_import_helpers.py  meta_llama_helpers.py  mistral_helpers.py  open_ai_chat_completions_api_helpers.py  open_ai_helpers.py  open_ai_responses_api_helpers.py  python_helpers.py  security_helpers.py  snowflake_arctic_helpers.py  streamlit_helpers.py  system_messages.py
widgets/: about.py  analytics_agent.py  chart_builder.py  chat.py  create_documentation.py  data_analysis.py  data_analyst.py  data_dictionary.py  document_and_debug.py  home.py  prompt_guide.py  sample_datasets.py  sidebar.py  snowflake_connection.py  uploaded_data.py  uploader.py
