[tool.poetry]
name = "future-of-ai-is-open-hackathon"
version = "0.1.0"
description = ""
authors = ["BalajiKesavan <36139209+balajikesavan90@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"
snowflake-connector-python = "^3.17.0"
seaborn = "^0.13.2"
plotly = "^6.0.1"
replicate = "^1.0.4"
openai = "^1.70.0"
tiktoken = "^0.9.0"
pyarrow = "^18.0.0"
pillow = "^11.1.0"
pydantic = "^2.11.3"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
